# hailo-apps-internal

./: .copilotignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PIPELINE_SPECS.md  README.md  changelog.md  install.sh  lpr_comparison_report.md  lpr_ocr_debugging_review.md  pyproject.toml  run_tests.sh  setup_env.sh
community/apps/hailo_drone_follow/: .gitignore  .gitmodules  CLAUDE.md  PARAMETERS.md  README.md  RESOLUTION_CONTROL.md  SETUP_GUIDE.md  TEST_PLAN.md  TROUBLESHOOTING.md  df_config.example.json  df_params.json  install.sh  pyproject.toml  requirements.txt  run_drone.sh  setup_env.sh
community/apps/hailo_drone_follow/configs/: outdoor_follow.json  outdoor_orbit.json  outdoor_yaw_only.json
community/apps/hailo_drone_follow/docs/: calibration-flight-guide.md  control-architecture.md  design-review.md  tracking-reid-algorithm.md
community/apps/hailo_drone_follow/drone_follow/: __init__.py  drone_follow_app.py  perf_tracker.py
community/apps/hailo_drone_follow/drone_follow/drone_api/: __init__.py  mavsdk_drone.py
community/apps/hailo_drone_follow/drone_follow/follow_api/: __init__.py  config.py  controller.py  state.py  types.py
community/apps/hailo_drone_follow/drone_follow/pipeline_adapter/: __init__.py  byte_tracker.py  fast_tracker.py  hailo_drone_detection_manager.py  reid_manager.py  tracker.py  tracker_factory.py
community/apps/hailo_drone_follow/drone_follow/servers/: __init__.py  follow_server.py  openhd_bridge.py  web_server.py
community/apps/hailo_drone_follow/drone_follow/tests/: conftest.py  test_config_persistence.py  test_controller.py  test_filtered_bbox.py  test_follow_server.py  test_follow_target_state.py  test_install_smoke.py  test_reid_drift_protection.py  test_shared_state.py  test_sim_worlds.py  test_sot_dispatch.py  test_test_log_writer.py  test_tracker_protocol.py  test_velocity_api_and_smoother.py  test_velocity_command_shape.py
community/apps/hailo_drone_follow/drone_follow/tools/: __init__.py
community/apps/hailo_drone_follow/drone_follow/ui/: index.html  package-lock.json  package.json  vite.config.js
community/apps/hailo_drone_follow/reid_analysis/: README.md  __init__.py  gallery_strategies.py  mot17_eval.py  reid_analysis_app.py  reid_benchmark.sh  reid_benchmark_results_20260324_023000.txt  reid_embedding_extractor.py  reid_eval.py  reid_sweep.py
community/apps/hailo_drone_follow/scripts/: install_air.sh  install_ground_station.sh  start_air.sh  start_ground.sh  uninstall_air.sh  uninstall_ground_station.sh
community/apps/hailo_drone_follow/scripts/boot/: drone-follow-boot.service  drone-follow-boot.sh  install.sh  uninstall.sh
community/apps/hailo_drone_follow/sim/: gz_garden_env.sh  mavlink_relay.py  setup_sim.sh  start_sim.sh  world_loader.py
community/apps/hailo_drone_follow/sim/bridge/: video_bridge.py
community/apps/hailo_drone_follow/sim/configs/: simulation.json  simulation_follow.json
community/apps/hailo_drone_follow/sim/patches/: gz_transport13_compat.patch  x500_vision_camera.patch
community/apps/hailo_drone_follow/sim/worlds/: 2_person_world.sdf  2_persons_diagonal.sdf  circle_around.sdf  person_in_front.sdf  random_walk.sdf  walk_across_then_approach.sdf
community/apps/hailo_drone_follow/system/: 71-usb-wifi.rules  README.md  drone-network-mode.service  drone-network-mode.sh  enable_access_point.sh  install.sh  uninstall.sh
community/apps/pipeline_apps/depth_anything/postprocess/: depth_anything_postprocess.cpp  meson.build
community/apps/pipeline_apps/face_landmarks/postprocess/: build.sh  face_landmarks_postprocess.cpp  face_landmarks_postprocess.hpp  face_mesh_align.cpp  face_mesh_align.hpp  (+1 more)
community/apps/standalone_apps/depth_anything_cpp/: CMakeLists.txt  README.md  app.yaml  build.sh  depth_anything.cpp  run.sh
hailo_apps/cpp/classification/: CMakeLists.txt  README.md  classifier.cpp
hailo_apps/cpp/depth_estimation_stereo/: CMakeLists.txt  README.md  stereo_depth_estimation.cpp
hailo_apps/cpp/gesture_detection/: CMakeLists.txt  build.sh  gesture_classify.cpp  gesture_classify.hpp  gesture_detection.cpp  hand_landmark.cpp  hand_landmark.hpp  palm_detection.hpp
hailo_apps/cpp/instance_segmentation/: CMakeLists.txt  README.md  instance_seg_postprocess.cpp  instance_seg_postprocess.hpp  instance_segmentation.cpp  visualization_config.yaml  visulization_config.json
hailo_apps/cpp/low_power_poc/: CMakeLists.txt  README.md  build.sh  low_power_poc.cpp
hailo_apps/cpp/object_detection/: CMakeLists.txt  README.md  object_detection.cpp  visualization_config.yaml
hailo_apps/cpp/object_detection/utils/: utils.cpp
hailo_apps/cpp/onnxrt_hailo_pipeline/: CMakeLists.txt  README.md  download_resources.ps1  download_resources.sh  onnx_decode.cpp  onnxrt_hailo_pipeline.cpp
hailo_apps/cpp/oriented_object_detection/: CMakeLists.txt  README.md  oriented_object_detection.cpp
hailo_apps/cpp/pose_estimation/: CMakeLists.txt  README.md  yolov8pose_example.cpp  yolov8pose_postprocess.hpp
hailo_apps/cpp/zero_shot_classification/: CMakeLists.txt  README.md  clip_example.cpp  download_resources.ps1
hailo_apps/postprocess/: compile_postprocess.sh  meson.build
hailo_apps/postprocess/cpp/: clip.cpp  clip.hpp  clip_croppers.cpp  clip_croppers.hpp  generic_cropper.cpp  generic_cropper.hpp  gesture_classification.cpp  gesture_classification.hpp  hailomat_compat.hpp  hand_affine_warp.cpp  hand_affine_warp.hpp  hand_croppers.cpp  hand_croppers.hpp  hand_landmark_postprocess.cpp  lp_crop_saver.cpp  lp_crop_saver.hpp  lpr_croppers.cpp  lpr_croppers.hpp  lpr_ocrsink.cpp  lpr_overlay.cpp  lpr_roi.hpp  meson.build  ocr_postprocess.cpp  ocr_postprocess.hpp  palm_croppers.cpp  palm_croppers.hpp  palm_detection_postprocess.cpp  person_palm_croppers.cpp  person_palm_croppers.hpp  yolo_hailortpp.cpp  yolo_hailortpp.hpp  yolov4_lp_postprocess.cpp  yolov4_lp_postprocess.hpp
hailo_apps/postprocess/cpp/overlay_community/: README.md  gsthailooverlay_community.cpp  gsthailooverlay_community.hpp  overlay.cpp  overlay.hpp  overlay_utils.hpp  sprite_cache.hpp  style_config.hpp
(+910 files in other folders)
